style.css
:root {
    --primaryColour: #6b29ef;
    --secondaryColour: #8449fc;
    --secondaryLogoColour: #b494f7;
    --badColour: rgba(255, 255, 255, 0.2);
    --reallyBadColour: #ef2727;
    --primaryBackgroundColour: #262626;
    --secondaryBackgroundColour: #424242;
    --highlightColour: #27ef70;
}

* {
    font-family: "Roboto", sans-serif;
}

body {
    background-color: var(--primaryBackgroundColour);
    margin-bottom: 0;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: calc(100% - 16px);
    padding: 10px;
    z-index: 1;
    background-color: var(--secondaryBackgroundColour);
}

main {
    margin: 20px;
    margin-top: 100px;
    min-height: calc(100vh - 100px);
    color: white;
    padding-left: 10%;
    padding-right: 10%;
}

footer {
    width: calc(100% - 4px);
    margin: -8px;
    margin-bottom: -16px;
    padding: 10px;
    background-color: var(--primaryColour);
    color: white;
}

a {
    color: var(--secondaryLogoColour);
}

h2 {
    font-size: 18pt
}

a.footer {
    color: white;
}

a.hidden {
    color: inherit;
    text-decoration: inherit;
    outline: unset!important;
}

a.pill {
    margin-left: 2.5px;
    margin-right: 2.5px;
    padding: 5px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 20px;
    color: white;
    background-color: var(--secondaryBackgroundColour);
    text-decoration: none;
    transition: 0.5s;
}

a.pill.selected {
    background-color: var(--primaryColour);
}

.filterBy {
    margin-top: 10px;
    margin-bottom: 10px;
}

button {
    margin: 5px;
    padding: 10px;
    font-size: 16px;
    background-color: var(--primaryColour);
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: 0.5s;
}

button.secondary {
    background-color: var(--secondaryColour);
}

button.bad {
    background-color: var(--badColour);
}

button.reallyBad {
    background-color: var(--reallyBadColour);
}

button.highlight {
    background-color: var(--highlightColour);
    color: black;
}

button.search {
    font-size: 20px;
    width: 100px;
}

button.corner {
    position: fixed;
    bottom: 5px;
    right: 5px;
    z-index: 1;
}

button.motd {
    position: relative;
    top: -60px;
    left: 5px;
    z-index: 0;
}

input, select {
    margin: 5px;
    padding: 10px;
    font-size: 16px;
    background-color: white;
    color: black;
    border: none;
    border-radius: 5px;
}

select {
    width: 238px;
}

input.search {
    font-size: 20px;
    background-color: rgba(255, 255, 255, 0.1);
    color: white;
    width: calc(100% - 140px);
}

input[type="file"] {
    background-color: transparent;
    width: calc(100% - 40px);
    background-color: rgba(255, 255, 255, 0.2);
    color: white;
}

textarea {
    width: calc(100% - 30px);
    margin: 5px;
    padding: 10px;
    font-size: 16px;
    background-color: white;
    color: black;
    border: none;
    border-radius: 5px;
    resize: none;
}

hr {
    width: calc(100% - 10px);
    border: 2px solid rgba(255, 255, 255, 0.1);
    border-radius: 2px;
}

code {
    font-family: monospace;
    background-color: rgba(255, 255, 255, 0.7);
    color: black;
    border-radius: 2px;
}

i.button {
    font-size: 14px!important;
}

embed {
    height: 60vh;
}

.desktop {
    display: unset;
}

.mobile {
    display: none;
}

.notSignedIn {
    display: none;
}

.signedIn {
    display: none;
}

.notAdmin {
    display: none;
}

.notAdminSpan {
    display: none;
}

.admin {
    display: none;
}

.adminSpan {
    display: none;
}

.left {
    text-align: left!important;
}

.center {
    text-align: center!important;
}

.right {
    text-align: right!important;
}

.floatLeft {
    float: left!important;
}

.floatRight {
    float: right!important;
}

.cutOff {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.card {
    margin-bottom: 10px;
    padding: 10px;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
}

.centre-card {
    margin-bottom: 10px;
    padding: 10px;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
    align-content: center;
    text-align: center;
}

.card.coloured {
    background-color: var(--primaryColour);
}

.card.profile {
    height: 80px;
}

.card.search {
    background-color: transparent;
    margin: -5px;
    margin-bottom: 5px;
    padding: 0;
}

.card.motd {
    background-color: transparent;
    margin: -5px;
    margin-bottom: -50px;
    padding: 0;
}

.itemHolder {
    margin-left: -5px;
    margin-right: -6px;
    overflow: auto;
}

.item {
    width: calc(33.3% - 30px);
    margin: 5px;
    padding: 10px;
    float: left;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
}

.item.coloured {
    background-color: var(--primaryColour);
}

.itemThumbnailHolder {
    height: 15vw;
    overflow: hidden;
    margin: -10px;
    margin-bottom: 0px;
    border-radius: 5px 5px 0 0;
}

.itemThumbnail {
    width: calc(100% + 20px);
    margin: -10px;
    border-radius: 5px 5px 0 0;
}

.itemTitle {
    margin: 5px;
}

.adIcon {
    width: fit-content;
    margin-right: -10px;
    padding: 5px;
    padding-left: 10px;
    padding-right: 10px;
    float: right;
    border-radius: 5px 0 5px 0;
    background-color: var(--highlightColour);
    color: black;
}

.gameItem {
    height: calc(15vw + 80px);
}

.gameByPrefix {
    padding-left: 5px;
}

.profileInfo {
    margin-left: 10px;
    width: calc(100% - 90px);
}

.options {
    float: right;
    margin-right: -8px;
}

.loader {
    margin: 20px;
    font-size: 64px!important;
    color: var(--secondaryBackgroundColour);
    cursor: default;
    transition: 1.5s;
}

.loaderHolder {
    text-align: center;
}

.skipTo {
    position: absolute;
    top: 0;
    left: -200px;
    margin: 5px;
    padding: 20px;
    text-decoration: none;
    background-color: var(--primaryColour);
    color: white;
    border-radius: 5px;
    z-index: 2;
    outline: none;
    transition: 0.2s;
}

.skipTo:focus, .skipTo:active {
    left: 0;
}

.headerRight {
    float: right;
    height: 100%;
}

.headerButton {
    display: inline-block;
    margin: 5px;
    padding: 10px;
    text-decoration: none;
    color: white;
    font-size: 20px;
    border-radius: 5px;
    transition: 1s;
}

.headerButton.selected {
    background-color: rgba(255, 255, 255, 0.1);
}

.headerButton:hover {
    background-color: rgba(255, 255, 255, 0.1);
}

.headerButton.logo {
    margin: unset;
    padding: unset;
}

.headerButton.logo:hover {
    background-color: unset;
}

.accountPicture, .profilePicture {
    width: 80px;
    height: 80px;
    border-radius: 40px;
}

.accountPicture.small, .profilePicture.small {
    width: 40px;
    height: 40px;
    border-radius: 20px;
}

.creatorAccountPicture {
    width: 80px;
    height: 80px;
    border-radius: 40px;
}

.creatorAccountPicture.small {
    width: 40px;
    height: 40px;
    border-radius: 20px;
}

.aboutLogo {
    height: 20px;
    width: 20px;
}

.gameUploadField {
    width: calc(25% - 33px);
}

select.gameUploadField {
    width: calc(25% - 13px);
}

.comment {
    padding-left: 16px;
    padding-right: 16px;
    border-radius: 5px;
}

.comment:hover {
    background-color: rgba(255, 255, 255, 0.05);
}

.commentDate {
    color: #aeaeae;
}

.commentContent {
    margin-top: 0;
    overflow-wrap: break-word;
    word-wrap: break-word;
}

#signIn {
    display: none;
}

#signUp {
    display: none;
}

#headerLogo {
    height: 50px;
}

#motdMessage {
    width: calc(100% - 10px);
    margin: 5px;
    border-radius: 5px;
    cursor: pointer;
}

#form {
    width: 100%;
    height: 930px;
    border: none;
    border-radius: 5px;
}

#gameFrame {
    display: none;
}

#gameIframe {
    width: calc(100% - 10px);
    height: 35vw;
    border: none;
}

#gameExitFullscreen {
    display: none;
}

@media (max-width: 800px) {
    main {
        width: calc(100vw - 54px)!important;
        padding-left: unset;
        padding-right: unset;
    }

    button.motd {
        display: none;
    }
    
    .desktop {
        display: none;
    }

    .mobile {
        display: unset;
    }

    .card.motd {
        margin-bottom: 5px;
    }

    .itemThumbnailHolder {
        height: 20vw;
    }

    .gameItem {
        height: calc(20vw + 80px);
    }
}

@media (max-width: 600px) {
    .item {
        width: calc(100% - 31px);
        margin-bottom: 10px;
        float: none;
    }

    .itemThumbnailHolder {
        height: 50vw;
    }

    .itemThumbnail {
        margin-top: -5%;
    }

    .gameItem {
        height: calc(50vw + 80px);
    }
    
    .gameUploadField {
        width: calc(100% - 30px);
    }
    
    select.gameUploadField {
        width: calc(100% - 10px);
    }
}

@media (max-width: 400px) {
    .headerButton {
        font-size: 16px;
    }
}

.sociallogo {
    height: 30px;
    width: 30px;
}

.social_text {
    font-size: 20pt;
    text-decoration: none;
    text-align: center;
}

.footerEmbed {
    width: 100%;
}

.last-updated {
    font-size: 15px;
    text-align: left;
    padding-left: 2%;
}

.first-published {
    font-size: 15px;
    text-align: left;
    padding-left: 2%;
}

.author {
    font-size: 15px;
    text-align: left;
}

.warning {
    font-weight: bold;
    color: red;
}

.warningwhitebkgd {
    font-weight: bold;
    color: red;
    background-color: white;
}

